--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#about" class="effect-3 scroll">About</a></li>
 						<li><a href="#services" class="effect-3 scroll">Services</a></li>
 						<li><a href="#portfolio" class="effect-3 scroll">Portfolio</a></li>
-						<li><a href="#team" class="effect-3 scroll">Team</a></li>
-						<li><a href="#client" class="effect-3 scroll">Clients</a></li>
+						<!-- <li><a href="#team" class="effect-3 scroll">Team</a></li>
+						<li><a href="#client" class="effect-3 scroll">Clients</a></li> -->
 						<li><a href="#contact" class="effect-3 scroll">Contact Us</a></li>
 					</ul>
 				</nav>
@@ -424,7 +424,7 @@ of aspects that go on to define the space that you would live in.
 <!-- //gallery -->
 
 <!-- Team -->
-<div class="team" id="team">
+<!-- <div class="team" id="team">
 	<div class="team_grids">
 		<div class="col-md-4 team_grid1">
 			<h3 class="heading">Our <span>Team</span></h3>
@@ -507,14 +507,14 @@ of aspects that go on to define the space that you would live in.
 			</div>
 		<div class="clearfix"></div>
 	</div>
-</div>
+</div> -->
 <!-- //Team -->
 
 <!-- Clients -->
-<div class="clients-main" id="client">
-	<div class="container">
+<!-- <div class="clients-main" id="client">
+	<div class="container"> -->
 		<!-- Owl-Carousel -->
-		<h3 class="heading">Clients <span>Words </span></h3>
+		<!-- <h3 class="heading">Clients <span>Words </span></h3>
 		<div class="cli-ent">
 			<section class="slider">
 				<div class="flexslider">
@@ -555,10 +555,10 @@ of aspects that go on to define the space that you would live in.
 					</ul>
 				</div>
 			</section>
-		</div>
+		</div> -->
 		<!--// Owl-Carousel -->
-	</div>
-</div>
+	<!-- </div>
+</div> -->
 <!--// Clients -->
 
 <!-- contact -->
@@ -569,18 +569,21 @@ of aspects that go on to define the space that you would live in.
 			<div class="col-md-6 contact-form-left">
 				<div class="w3layouts-contact-form-top">
 					<h3>Find Us</h3>
-					<p>Pellentesque eget mi nec est tincidunt accumsan. Proin fermentum dignissim justo, vel euismod justo sodales vel. In non condimentum mauris. Maecenas condi mentum interdum lacus, ac varius nisl dignissim ac.</p>
+					<p>Vinyas-1 Interiors Are Made Up Of Factory Manufactured And Traditional Work, Which Are Fitted To Create A Whole, Efficient Designs. Our Interior Design Involves A Creative Balance Of Aesthetics Vs Functionality, Storage Vs Space, Grandeur Vs Minimalism, Luxury Vs Budget And Many Such Infinite Combination Of Aspects That Go On To Define The Space That You Would Live In.</p>
 				</div>
 				
 				<div class="contact-form-top">
 					<h3>Address</h3>
 				</div>
+
+
+
 				<ul class="con_inner_text">
-					<li><span class="fa fa-map-marker" aria-hidden="true"></span>1234k Avenue, <label> New York City.</label></li>
-					<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@example.com">info@example.com</a></li>
-					<li><span class="fa fa-phone" aria-hidden="true"></span> +1234 567 567</li>
+					<li><span class="fa fa-map-marker" aria-hidden="true"></span>#55, DUO Residency,Jakkur Plantation, Yelahanka <label> Bangalore - 560064.</label></li>
+					<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@Vinyas-1.com">info@Vinyas-1.com</a></li>
+					<li><span class="fa fa-phone" aria-hidden="true"></span> +91 8147611870</li>
 					<li><span class="fa fa-clock-o" aria-hidden="true"></span> 8am to 6pm</li>
-					<li><span class="fa fa-globe" aria-hidden="true"></span> <a href="#">info@website.com</a></li>
+					<li><span class="fa fa-globe" aria-hidden="true"></span> <a href="#">Vinyas-1.com</a></li>
 				</ul>
 			</div>
 			<div class="col-md-6 contact-form-right">
@@ -609,8 +612,7 @@ of aspects that go on to define the space that you would live in.
 		<div class="f-bg-w3l">
 			<div class="col-md-3 w3layouts_footer_grid" data-aos="fade-right">
 				<h3>About Company</h3>
-				<p> Aenean fermentum purus digniss immetus sodales pretium. Sedin consectetur consequat
-				fermen. tumiauris tellus massa, vestibu lum hendrerit eros non. </p>
+				<p> Vinyas-1 is a reputed interior design company known for its thoughtful approach to design and its sharp attention to details, quality and finest inishing options that have a perfect balance of functionality and aesthetics.</p>
 				<ul class="social_agileinfo">
 					<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
@@ -621,11 +623,11 @@ of aspects that go on to define the space that you would live in.
 			<div class="col-md-3 w3layouts_footer_grid" data-aos="fade-right">
 				<h3>Contact Us</h3>
 					<ul class="con_inner_text">
-						<li><span class="fa fa-map-marker" aria-hidden="true"></span>1234k Avenue, <label> New York City.</label></li>
-						<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@example.com">info@example.com</a></li>
-						<li><span class="fa fa-phone" aria-hidden="true"></span> +1234 567 567</li>
+						<li><span class="fa fa-map-marker" aria-hidden="true"></span>#55, DUO Residency,Jakkur Plantation, Yelahanka, <label> Bangalore - 560064</label></li>
+						<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@example.com">info@Vinyas-1.com</a></li>
+						<li><span class="fa fa-phone" aria-hidden="true"></span> +91 8147611870</li>
 						<li><span class="fa fa-clock-o" aria-hidden="true"></span> 8am to 6pm</li>
-						<li><span class="fa fa-globe" aria-hidden="true"></span> <a href="#">info@website.com</a></li>
+						<li><span class="fa fa-globe" aria-hidden="true"></span> <a href="#">Vinyas-1.com</a></li>
 					</ul>
 
 			</div>
@@ -662,7 +664,7 @@ of aspects that go on to define the space that you would live in.
 <!-- copyright -->
 <div class="copyright">
 	<div class="container">
-		<p class="copyright">© 2018 Interior Home. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">w3layouts</a></p>
+		<p class="copyright">© 2019 Vinyas-1. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">Murali Yadav</a></p>
 	</div>
 </div>
 <!-- //copyright -->
