--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Vinyas-1</title>
+<title>Vinyas-I</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Interior Home Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -46,7 +46,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<h1><a class="navbar-brand" href="index.html">Vinyas-1 </a></h1>
+				<h1><a class="navbar-brand" href="index.html">Vinyas-I </a></h1>
 
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -129,12 +129,12 @@ Kitchens are a place where memories are homemade and seasoned with love. And if 
 		<h3 class="heading">About <span>Us</span></h3>
 		<div class="about_grids">
 			<div class="col-md-6 about_left">
-				<h4>Vinyas-1 interiors are made up of factory manufactured and traditional work,
+				<h4>Vinyas-I interiors are made up of factory manufactured and traditional work,
 which are fitted to create a whole, efficient designs. Our interior design involves
 a creative balance of aesthetics Vs functionality, storage Vs space, grandeur Vs
 minimalism, luxury Vs budget and many such infinite combination
 of aspects that go on to define the space that you would live in.</h4>
-				<p>Vinyas-1 is a reputed interior design company
+				<p>Vinyas-I is a reputed interior design company
 						known for its thoughtful approach to design
 						and its sharp attention to details, quality and
 						finest inishing options that have a perfect
@@ -250,7 +250,7 @@ of aspects that go on to define the space that you would live in.
 			</div>
 			<span id="typed" style="white-space:pre;"> Our Aim</span>
 			<p class="typing_bottom">Our experienced and reliable team promises smooth hassle-free experience to our clients. Our mission aim to be globally recognised professional interior design company, providing solutions in the ield of high-end corporate, commercial and residential interiors.</p>
-			<h4>Vinyas-1</h4>
+			<h4>Vinyas-I</h4>
 			<br>
 			<a class="#" data-toggle="modal" data-target="#">
 				<span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span>
@@ -569,7 +569,7 @@ of aspects that go on to define the space that you would live in.
 			<div class="col-md-6 contact-form-left">
 				<div class="w3layouts-contact-form-top">
 					<h3>Find Us</h3>
-					<p>Vinyas-1 Interiors Are Made Up Of Factory Manufactured And Traditional Work, Which Are Fitted To Create A Whole, Efficient Designs. Our Interior Design Involves A Creative Balance Of Aesthetics Vs Functionality, Storage Vs Space, Grandeur Vs Minimalism, Luxury Vs Budget And Many Such Infinite Combination Of Aspects That Go On To Define The Space That You Would Live In.</p>
+					<p>Vinyas-I Interiors Are Made Up Of Factory Manufactured And Traditional Work, Which Are Fitted To Create A Whole, Efficient Designs. Our Interior Design Involves A Creative Balance Of Aesthetics Vs Functionality, Storage Vs Space, Grandeur Vs Minimalism, Luxury Vs Budget And Many Such Infinite Combination Of Aspects That Go On To Define The Space That You Would Live In.</p>
 				</div>
 				
 				<div class="contact-form-top">
@@ -580,10 +580,10 @@ of aspects that go on to define the space that you would live in.
 
 				<ul class="con_inner_text">
 					<li><span class="fa fa-map-marker" aria-hidden="true"></span>#55, DUO Residency,Jakkur Plantation, Yelahanka <label> Bangalore - 560064.</label></li>
-					<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@Vinyas-1.com">info@Vinyas-1.com</a></li>
+					<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@Vinyas-I.com">info@Vinyas-I.com</a></li>
 					<li><span class="fa fa-phone" aria-hidden="true"></span> +91 8147611870</li>
 					<li><span class="fa fa-clock-o" aria-hidden="true"></span> 8am to 6pm</li>
-					<li><span class="fa fa-globe" aria-hidden="true"></span> <a href="#">Vinyas-1.com</a></li>
+					<li><span class="fa fa-globe" aria-hidden="true"></span> <a href="#">Vinyas-I.com</a></li>
 				</ul>
 			</div>
 			<div class="col-md-6 contact-form-right">
@@ -612,7 +612,7 @@ of aspects that go on to define the space that you would live in.
 		<div class="f-bg-w3l">
 			<div class="col-md-3 w3layouts_footer_grid" data-aos="fade-right">
 				<h3>About Company</h3>
-				<p> Vinyas-1 is a reputed interior design company known for its thoughtful approach to design and its sharp attention to details, quality and finest inishing options that have a perfect balance of functionality and aesthetics.</p>
+				<p> Vinyas-I is a reputed interior design company known for its thoughtful approach to design and its sharp attention to details, quality and finest inishing options that have a perfect balance of functionality and aesthetics.</p>
 				<ul class="social_agileinfo">
 					<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
@@ -624,10 +624,10 @@ of aspects that go on to define the space that you would live in.
 				<h3>Contact Us</h3>
 					<ul class="con_inner_text">
 						<li><span class="fa fa-map-marker" aria-hidden="true"></span>#55, DUO Residency,Jakkur Plantation, Yelahanka, <label> Bangalore - 560064</label></li>
-						<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@example.com">info@Vinyas-1.com</a></li>
+						<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@example.com">info@Vinyas-I.com</a></li>
 						<li><span class="fa fa-phone" aria-hidden="true"></span> +91 8147611870</li>
 						<li><span class="fa fa-clock-o" aria-hidden="true"></span> 8am to 6pm</li>
-						<li><span class="fa fa-globe" aria-hidden="true"></span> <a href="#">Vinyas-1.com</a></li>
+						<li><span class="fa fa-globe" aria-hidden="true"></span> <a href="#">Vinyas-I.com</a></li>
 					</ul>
 
 			</div>
@@ -664,7 +664,7 @@ of aspects that go on to define the space that you would live in.
 <!-- copyright -->
 <div class="copyright">
 	<div class="container">
-		<p class="copyright">© 2019 Vinyas-1. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">Murali Yadav</a></p>
+		<p class="copyright">© 2019 Vinyas-I. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">Murali Yadav</a></p>
 	</div>
 </div>
 <!-- //copyright -->
