--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Vinyas-I</title>
+<title>Vinyas-I	 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Interior Home Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -46,7 +46,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<h1><a class="navbar-brand" href="index.html">Vinyas-I </a></h1>
+				<h1><a class="navbar-brand" href="index.html">Vinyas-<data style="font-style:italic;">I</data>  </a></h1>
 
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -129,21 +129,21 @@ Kitchens are a place where memories are homemade and seasoned with love. And if 
 		<h3 class="heading">About <span>Us</span></h3>
 		<div class="about_grids">
 			<div class="col-md-6 about_left">
-				<h4>Vinyas-I interiors are made up of factory manufactured and traditional work,
+				<h4>Vinyas-<data style="font-style:italic;">I</data> interiors are made up of factory manufactured and traditional work,
 which are fitted to create a whole, efficient designs. Our interior design involves
 a creative balance of aesthetics Vs functionality, storage Vs space, grandeur Vs
 minimalism, luxury Vs budget and many such infinite combination
 of aspects that go on to define the space that you would live in.</h4>
-				<p>Vinyas-I is a reputed interior design company
+				<p>Vinyas-<data style="font-style:italic;">I</data> is a reputed interior design company
 						known for its thoughtful approach to design
 						and its sharp attention to details, quality and
-						finest inishing options that have a perfect
+						finest Finishing options that have a perfect
 						balance of functionality and aesthetics.</p>
 				<p class="second_para">Our experienced and reliable team promises
 smooth hassle-free experience to our clients.
 Our mission aim to be globally recognised
 professional interior design company, providing
-solutions in the ield of high-end corporate,
+solutions in the Field of high-end corporate,
 commercial and residential interiors.</p>
 				
 			</div>
@@ -249,8 +249,8 @@ of aspects that go on to define the space that you would live in.
 				<p>We do <i>Wooden wall</i> Design</p>
 			</div>
 			<span id="typed" style="white-space:pre;"> Our Aim</span>
-			<p class="typing_bottom">Our experienced and reliable team promises smooth hassle-free experience to our clients. Our mission aim to be globally recognised professional interior design company, providing solutions in the ield of high-end corporate, commercial and residential interiors.</p>
-			<h4>Vinyas-I</h4>
+			<p class="typing_bottom">Our experienced and reliable team promises smooth hassle-free experience to our clients. Our mission aim to be globally recognised professional interior design company, providing solutions in the Field of high-end corporate, commercial and residential interiors.</p>
+			<h4>Vinyas-<data style="font-style:italic;">I</data></h4>
 			<br>
 			<a class="#" data-toggle="modal" data-target="#">
 				<span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span>
@@ -335,84 +335,84 @@ of aspects that go on to define the space that you would live in.
 		<div class="gallery_gds">
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g1.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+					<a href="images/g1.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img class="img-responsive img-style row2" src="images/g1.jpg" alt=""  /> 
 					</a> 
 				</div>
 			</div>
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g2.jpg" class="swipebox" title="Duis maximus tortor diam, ac lobortis justo rutrum quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non purus fermentum, eleifend velit non">
+					<a href="images/g2.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g2.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
 			</div>
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g3.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+					<a href="images/g3.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g3.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
 			</div>
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g4.jpg" class="swipebox" title="Praesent non purus fermentum, eleifend velit non Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis.">
+					<a href="images/g4.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g4.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
 			</div>
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g5.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+					<a href="images/g5.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g5.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
 			</div>
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g6.jpg" class="swipebox" title="Duis maximus tortor diam, ac lobortis justo rutrum quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non purus fermentum, eleifend velit non">
+					<a href="images/g6.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g6.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
 			</div>
 				<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g7.jpg" class="swipebox" title="Praesent non purus fermentum, eleifend velit non Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis.">
+					<a href="images/g7.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g7.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
 			</div>
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g8.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
+					<a href="images/g8.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g8.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
 			</div>
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g9.jpg" class="swipebox" title="Duis maximus tortor diam, ac lobortis justo rutrum quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non purus fermentum, eleifend velit non">
+					<a href="images/g9.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g9.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
 			</div>
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g10.jpg" class="swipebox" title="Duis maximus tortor diam, ac lobortis justo rutrum quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non purus fermentum, eleifend velit non">
+					<a href="images/g10.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g10.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
 			</div>
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g11.jpg" class="swipebox" title="Duis maximus tortor diam, ac lobortis justo rutrum quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non purus fermentum, eleifend velit non">
+					<a href="images/g11.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g11.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
 			</div>
 			<div class="col-md-3 gal-w3l">
 				<div class="agileits-img">
-					<a href="images/g12.jpg" class="swipebox" title="Duis maximus tortor diam, ac lobortis justo rutrum quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non purus fermentum, eleifend velit non">
+					<a href="images/g12.jpg" class="swipebox" title="Vinyas-I interiors">
 						<img src="images/g12.jpg" alt="" class="img-responsive img-style row2" />
 					</a>	
 				</div>
@@ -569,7 +569,7 @@ of aspects that go on to define the space that you would live in.
 			<div class="col-md-6 contact-form-left">
 				<div class="w3layouts-contact-form-top">
 					<h3>Find Us</h3>
-					<p>Vinyas-I Interiors Are Made Up Of Factory Manufactured And Traditional Work, Which Are Fitted To Create A Whole, Efficient Designs. Our Interior Design Involves A Creative Balance Of Aesthetics Vs Functionality, Storage Vs Space, Grandeur Vs Minimalism, Luxury Vs Budget And Many Such Infinite Combination Of Aspects That Go On To Define The Space That You Would Live In.</p>
+					<p>Vinyas-<data style="font-style:italic;">I</data> Interiors Are Made Up Of Factory Manufactured And Traditional Work, Which Are Fitted To Create A Whole, Efficient Designs. Our Interior Design Involves A Creative Balance Of Aesthetics Vs Functionality, Storage Vs Space, Grandeur Vs Minimalism, Luxury Vs Budget And Many Such Infinite Combination Of Aspects That Go On To Define The Space That You Would Live In.</p>
 				</div>
 				
 				<div class="contact-form-top">
@@ -581,7 +581,7 @@ of aspects that go on to define the space that you would live in.
 				<ul class="con_inner_text">
 					<li><span class="fa fa-map-marker" aria-hidden="true"></span>#55, DUO Residency,Jakkur Plantation, Yelahanka <label> Bangalore - 560064.</label></li>
 					<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@Vinyas-I.com">info@Vinyas-I.com</a></li>
-					<li><span class="fa fa-phone" aria-hidden="true"></span> +91 8147611870</li>
+					<li><span class="fa fa-phone" aria-hidden="true"></span>+91 9141057160</li>
 					<li><span class="fa fa-clock-o" aria-hidden="true"></span> 8am to 6pm</li>
 					<li><span class="fa fa-globe" aria-hidden="true"></span> <a href="#">Vinyas-I.com</a></li>
 				</ul>
@@ -612,7 +612,7 @@ of aspects that go on to define the space that you would live in.
 		<div class="f-bg-w3l">
 			<div class="col-md-3 w3layouts_footer_grid" data-aos="fade-right">
 				<h3>About Company</h3>
-				<p> Vinyas-I is a reputed interior design company known for its thoughtful approach to design and its sharp attention to details, quality and finest inishing options that have a perfect balance of functionality and aesthetics.</p>
+				<p> Vinyas-<data style="font-style:italic;">I</data> is a reputed interior design company known for its thoughtful approach to design and its sharp attention to details, quality and finest Finishing options that have a perfect balance of functionality and aesthetics.</p>
 				<ul class="social_agileinfo">
 					<li><a href="#" class="w3_facebook"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="#" class="w3_twitter"><i class="fa fa-twitter"></i></a></li>
@@ -625,7 +625,7 @@ of aspects that go on to define the space that you would live in.
 					<ul class="con_inner_text">
 						<li><span class="fa fa-map-marker" aria-hidden="true"></span>#55, DUO Residency,Jakkur Plantation, Yelahanka, <label> Bangalore - 560064</label></li>
 						<li><span class="fa fa-envelope-o" aria-hidden="true"></span> <a href="mailto:info@example.com">info@Vinyas-I.com</a></li>
-						<li><span class="fa fa-phone" aria-hidden="true"></span> +91 8147611870</li>
+						<li><span class="fa fa-phone" aria-hidden="true"></span> +91 9141057160</li>
 						<li><span class="fa fa-clock-o" aria-hidden="true"></span> 8am to 6pm</li>
 						<li><span class="fa fa-globe" aria-hidden="true"></span> <a href="#">Vinyas-I.com</a></li>
 					</ul>
@@ -664,7 +664,7 @@ of aspects that go on to define the space that you would live in.
 <!-- copyright -->
 <div class="copyright">
 	<div class="container">
-		<p class="copyright">© 2019 Vinyas-I. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">Murali Yadav</a></p>
+		<p class="copyright">© 2019 Vinyas-<data style="font-style:italic;">I</data>. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">Murali Yadav</a></p>
 	</div>
 </div>
 <!-- //copyright -->
